fix width on small screens

--- a/css/app.css
+++ b/css/app.css
@@ -39,7 +39,8 @@ h1 {
 
 .deck {
     pointer-events: none;
-    width: 660px;
+    width: 100%;
+    max-width: 660px;
     min-height: 680px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
